[package]
name = "kudu"
version = "0.1.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"
description = "Rust client for Apache Kudu"
keywords = ["kudu", "database"]

[workspace]
members = [
  "krpc",
  "krpc-build",
  "krpc-tests",
]

[dependencies]
byteorder = "1"
bytes = "0.4"
chrono = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
ieee754 = "0.2"
ifaces = "0.1"
itertools = "0.7"
krpc = { path = "krpc", version = "0.1.0" }
lazy_static = "0.2"
log = "0.3"
parking_lot = "0.4"
prost = "0.2"
prost-derive = "0.2"
prost-types = "0.2"
quickcheck = { version = "0.3", optional = true }
rand = "0.3.14"
tokio-core = "0.1"
tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer" }
uuid = "0.5"
vec_map = "0.8"

[build-dependencies]
curl = "0.4"
env_logger = "0.4"
flate2 = "0.2"
prost-build = "0.2"
tar = "0.4"

[dev-dependencies]
tempdir = "0.3"
env_logger = "*"
quickcheck = "0.3"

[replace]
"tacho:0.4.2" = { git = "https://github.com/danburkert/tacho" }
