[package]
name = "kudu"
version = "0.1.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"
description = "Rust client for Apache Kudu"
keywords = ["kudu", "database"]

[workspace]
members = [
  "krpc",
  "krpc-build",
  "krpc-tests",
]

[dependencies]
byteorder = "1"
bytes = "0.4"
chrono = "0.4"
futures = "0.1"
ieee754 = "0.2"
ifaces = "0.1"
itertools = "0.7"
krpc = { path = "krpc", version = "0.1.0" }
lazy_static = "1.0"
log = "0.3"
parking_lot = "0.5"
prost = "0.2"
prost-derive = "0.2"
prost-types = "0.2"
quickcheck = { version = "0.5", optional = true }
rand = "0.3.14"
slab = "0.4"
tokio = { git = "https://github.com/tokio-rs/tokio" }
tokio-threadpool = { git = "https://github.com/tokio-rs/tokio" }
tokio-timer = { git = "https://github.com/tokio-rs/tokio" }
url = "1"
uuid = "0.5"
vec_map = "0.8"

[build-dependencies]
curl = "0.4"
env_logger = "0.4"
flate2 = "1.0"
prost-build = "0.2"
tar = "0.4"
krpc-build = { path = "krpc-build", version = "0.1.0" }

[dev-dependencies]
tempdir = "0.3"
env_logger = "0.4"
quickcheck = "0.5"

[replace]
"tacho:0.4.2" = { git = "https://github.com/danburkert/tacho" }
