[package]
name = "krpc-tests"
version = "0.0.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
publish = false

[lib]
doctest = false

[dependencies]
bytes = "0.4"
krpc = { path = "../krpc" }
prost = { git = "https://github.com/danburkert/prost" }
prost-derive = { git = "https://github.com/danburkert/prost" }
prost-types = { git = "https://github.com/danburkert/prost" }
tokio-core = "0.1"

[build-dependencies]
env_logger = "0.4"
krpc-build = { path = "../krpc-build" }
prost-build = { git = "https://github.com/danburkert/prost" }
