[package]
name = "krpc-tests"
version = "0.0.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
publish = false

[lib]
doctest = false

[dependencies]
bytes = "0.4"
env_logger = "0.4"
futures = "0.1"
krpc = { path = "../krpc" }
prost = "0.2"
prost-derive = "0.2"
prost-types = "0.2"
tacho = "0.4"
tokio = "0.1"

[build-dependencies]
env_logger = "0.4"
krpc-build = { path = "../krpc-build" }
prost-build = "0.2"
