[package]
name = "krpc-tests"
version = "0.0.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
publish = false

[lib]
doctest = false

[dependencies]
bytes = "0.4"
env_logger = "0.5"
futures = "0.1"
krpc = { path = "../krpc" }
prost = "0.4"
prost-derive = "0.4"
prost-types = "0.4"
tokio = "0.1"

[build-dependencies]
env_logger = "0.5"
krpc-build = { path = "../krpc-build" }
prost-build = "0.4"
