[package]
name = "krpc"
version = "0.1.0"
authors = ["Dan Burkert <dan@danburkert.com>"]

[dependencies]
byteorder = "1"
bytes = "0.4"
fnv = "1"
futures = "0.1"
log = "0.3"
prost = { git = "https://github.com/danburkert/prost" }
prost-derive = { git = "https://github.com/danburkert/prost" }
prost-types = { git = "https://github.com/danburkert/prost" }
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"

[build-dependencies]
curl = "0.4"
prost-build = { git = "https://github.com/danburkert/prost" }
tempdir = "0.3"
