[package]
name = "krpc"
version = "0.1.0"
authors = ["Dan Burkert <dan@danburkert.com>"]

[dependencies]
byteorder = "1"
bytes = "0.4"
fnv = "1"
futures = "0.1"
futures-cpupool = "0.1"
log = "0.3"
prost = "0.2"
prost-derive = "0.2"
prost-types = "0.2"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tacho = "0.4"
itertools = "0.7"

[build-dependencies]
curl = "0.4"
prost-build = "0.2"
tempdir = "0.3"
