[package]
name = "krpc"
version = "0.1.0"
authors = ["Dan Burkert <dan@danburkert.com>"]

[dependencies]
byteorder = "1"
bytes = "0.4"
fnv = "1"
futures = "0.1"
log = "0.4"
prost = "0.4"
prost-derive = "0.4"
prost-types = "0.4"
tokio = "0.1"
tokio-io = "0.1"
tokio-threadpool = "0.1"
itertools = "0.7"

[build-dependencies]
curl = "0.4"
prost-build = "0.4"
tempdir = "0.3"
